fix css a bit to align the showText link properly during a scan
git-svn-id: file:///home/awy/mirror/slim/trunk/server@9329 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/HTML/Fishbone/skin.css
+++ b/HTML/Fishbone/skin.css
@@ -118,12 +118,19 @@ div#browsedbList {
 	height: auto;
 }
 
+.viewSelect
+{
+	float: right;
+	padding-top: 0px;
+}
+
 div#browsedbHeader {
 	margin-left:0px;
 }
 
 div#pwdlist {
 	clear: left;
+	float: left;
 }
 
 div#pagetitle {
